@@ -1204,6 +1204,9 @@ sanitize_numeric_value() {
     local sanitized_value
     sanitized_value="$(trim_whitespace "$raw_value")"
 
+    local int_pattern='^-?[0-9]+$'
+    local float_pattern='^[-+]?[0-9]+([.][0-9]+)?$'
+
     if [ -z "$min_value" ] || [ -z "$max_value" ]; then
         printf '%s\n' "$sanitized_value"
         return 0
@@ -1213,7 +1216,7 @@ sanitize_numeric_value() {
     local rejection_reason=""
 
     if [ "$numeric_mode" = "int" ]; then
-        if ! [[ "$sanitized_value" =~ ^-?[0-9]+$ ]]; then
+        if ! [[ "$sanitized_value" =~ $int_pattern ]]; then
             in_range=false
             rejection_reason="pattern"
         elif [ "$sanitized_value" -lt "$min_value" ] || [ "$sanitized_value" -gt "$max_value" ]; then
@@ -1224,7 +1227,7 @@ sanitize_numeric_value() {
         if [[ "$sanitized_value" == *","* ]]; then
             in_range=false
             rejection_reason="decimal_comma"
-        elif ! [[ "$sanitized_value" =~ ^[-+]?[0-9]+([.][0-9]+)$ ]]; then
+        elif ! [[ "$sanitized_value" =~ $float_pattern ]]; then
             in_range=false
             rejection_reason="pattern"
         elif ! awk -v v="$sanitized_value" -v min="$min_value" -v max="$max_value" 'BEGIN { if (v < min || v > max) exit 1; exit 0 }'; then
@@ -1248,7 +1251,7 @@ sanitize_numeric_value() {
     else
         local fallback_valid=true
         if [ "$numeric_mode" = "int" ]; then
-            if ! [[ "$fallback_candidate" =~ ^-?[0-9]+$ ]]; then
+            if ! [[ "$fallback_candidate" =~ $int_pattern ]]; then
                 fallback_valid=false
             elif [ "$fallback_candidate" -lt "$min_value" ] || [ "$fallback_candidate" -gt "$max_value" ]; then
                 fallback_valid=false
@@ -1256,7 +1259,7 @@ sanitize_numeric_value() {
         else
             if [[ "$fallback_candidate" == *","* ]]; then
                 fallback_valid=false
-            elif ! [[ "$fallback_candidate" =~ ^[-+]?[0-9]+([.][0-9]+)$ ]]; then
+            elif ! [[ "$fallback_candidate" =~ $float_pattern ]]; then
                 fallback_valid=false
             elif ! awk -v v="$fallback_candidate" -v min="$min_value" -v max="$max_value" 'BEGIN { if (v < min || v > max) exit 1; exit 0 }'; then
                 fallback_valid=false
